--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
   /* Center and scale the image nicely */
   
 	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/ece.jpg");
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/theme.jpg");
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -52,7 +52,7 @@
   /* Center and scale the image nicely */
   
 	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(2, 0, 36, 0.8), rgba(0, 212, 255, 0.8)), url("../img/theme.jpg");
+    background: -webkit-linear-gradient(rgba(2, 0, 36, 0.8), rgba(0, 212, 255, 0.8)), url("../img/keynote.jpg");
 	
 	background-position: center;
   background-repeat: no-repeat;
@@ -181,7 +181,7 @@
   /* Center and scale the image nicely */
   
 	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/travel main.jpg");
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/travel.jpg");
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -198,7 +198,7 @@
   /* Center and scale the image nicely */
   
 	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/theme.jpg");
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/contact.jpg");
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
