--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@
   float: left;
   width: 33.33333%;
   height: 102%;
-  text-align: center;
+  text-align: justify;
   box-sizing: border-box;
 }
 
