--- a/css/main.css
+++ b/css/main.css
@@ -426,4 +426,18 @@
   margin-top:20px;
 	
 }
+.image-wrapper {
+  margin: 0 auto;
+  
+  overflow: hidden;
+  font-size: 0;
+}
+img {
+  
+  transition: transform 0.3s ease-in-out;
+}
+.image-wrapper:hover img {
+  transform: scale(1.2);
+}
+
 
