--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,23 @@
   background-size: cover;
     
 }
+.kkr-bg {
+  /* The image used */
+
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  
+	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/kurukshetra.jpg");
+	
+	background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
+}
 
 .conftracks-bg {
   /* The image used */
@@ -426,6 +443,8 @@
   margin-top:20px;
 	
 }
+
+
 .image-wrapper {
   margin: 0 auto;
   
@@ -439,5 +458,4 @@ img {
 .image-wrapper:hover img {
   transform: scale(1.2);
 }
-
 
