--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,22 @@
     
 }
 
+.photog-bg {
+  /* The image used */
+
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  
+	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/phtog.jpg");
+	background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
+}
 
 .about-bg {
   /* The image used */
