--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,23 @@
     
 }
 
+.photog-bg {
+  /* The image used */
+
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  
+	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
+    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/phtog.jpg");
+	background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
+}
+
 .callforp-bg {
   /* The image used */
 
@@ -181,22 +198,6 @@
     
 }
 
-.photog-bg {
-  /* The image used */
-
-
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  
-	background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-    background: -webkit-linear-gradient(rgba(29, 38, 113, 0.8), rgba(195, 55, 100, 0.8)), url("../img/phtog.jpg");
-	background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-    
-}
 
 .about-bg {
   /* The image used */
@@ -330,15 +331,15 @@
     .box {
       float: left;
       position: relative;
-      width: 20%;
+      width: 25%;
       padding-bottom: 20%;
     }
     .boxInner {
       position: absolute;
-      left: 10px;
-      right: 10px;
-      top: 10px;
-      bottom: 10px;
+      left: 5%;
+      right: 5%;
+		top:5%;
+		
       overflow: hidden;
     }
     .boxInner img {
